# protura-newlib

./: config.sub
newlib/: configure  configure.host
newlib/doc/: Makefile.in  aclocal.m4  configure
newlib/iconvdata/: Makefile.in  configure
newlib/libc/: configure
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/iconv/ccs/: Makefile.in
newlib/libc/iconv/ccs/binary/: Makefile.in
newlib/libc/iconv/ces/: Makefile.in
newlib/libc/iconv/lib/: Makefile.in
newlib/libc/include/: grp.h  signal.h  stdio.h
newlib/libc/include/sys/: config.h
newlib/libc/locale/: Makefile.in
newlib/libc/machine/: configure
newlib/libc/machine/arc/: Makefile.in
newlib/libc/machine/arm/: Makefile.in  configure
newlib/libc/machine/cr16/: configure
newlib/libc/machine/cris/: configure
newlib/libc/machine/d10v/: configure
newlib/libc/machine/ft32/: Makefile.in
newlib/libc/machine/h8300/: configure
newlib/libc/machine/hppa/: configure
newlib/libc/machine/i386/: Makefile.in  configure
newlib/libc/machine/i960/: configure
newlib/libc/machine/microblaze/: configure
newlib/libc/machine/nds32/: configure
newlib/libc/machine/necv70/: configure
newlib/libc/machine/nios2/: configure
newlib/libc/machine/powerpc/: configure
newlib/libc/machine/sh/: configure
newlib/libc/machine/sparc/: configure
newlib/libc/machine/spu/: configure
newlib/libc/machine/tic80/: configure
newlib/libc/machine/visium/: Makefile.in
newlib/libc/machine/w65/: configure
newlib/libc/machine/z8k/: configure
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in
newlib/libc/reent/: Makefile.in
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/stdio/: Makefile.in  getdelim.c  getline.c
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.in
newlib/libc/string/: Makefile.in
newlib/libc/sys/: Makefile.in  aclocal.m4  configure  configure.in
newlib/libc/sys/a29khif/: configure
newlib/libc/sys/arm/: configure
newlib/libc/sys/decstation/: configure
newlib/libc/sys/epiphany/: configure
newlib/libc/sys/h8300hms/: configure
newlib/libc/sys/h8500hms/: configure
newlib/libc/sys/linux/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/argp/: Makefile.in
newlib/libc/sys/linux/cmath/: Makefile.in
newlib/libc/sys/linux/dl/: Makefile.in
newlib/libc/sys/linux/iconv/: Makefile.in
newlib/libc/sys/linux/intl/: Makefile.in
newlib/libc/sys/linux/linuxthreads/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/linuxthreads/machine/: Makefile.in  configure
newlib/libc/sys/linux/linuxthreads/machine/i386/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/machine/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/machine/i386/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/net/: Makefile.in
newlib/libc/sys/m88kbug/: configure
newlib/libc/sys/mmixware/: configure
newlib/libc/sys/netware/: configure
newlib/libc/sys/or1k/: Makefile.in  configure
newlib/libc/sys/protura/: Makefile.am  Makefile.in  _exit.c  arpa_inet.c  cfspeed.c  chdir.c  close.c  configure  configure.ac  crt0.S  crti.S  crtn.S  dup.c  dup2.c  execve.c  fcntl.c  fork.c  fstat.c  ftruncate.c  getdents.c  getpid.c  getppid.c  gettimeofday.c  grp.c  ioctl.c  isatty.c  kill.c  link.c  lseek.c  mkdir.c  mknod.c  mount.c  open.c  pathconf.c  pgrp.c  pipe.c  poll.c  read.c  reboot.c  rename.c  (+17 more)
newlib/libc/sys/protura/include/: poll.h  syscall.h  uname.h
newlib/libc/sys/protura/include/arpa/: inet.h
newlib/libc/sys/protura/include/netinet/: in.h
newlib/libc/sys/protura/machine/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
newlib/libc/sys/protura/machine/arm/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  syscall.h
newlib/libc/sys/protura/machine/i386/: Makefile.am  aclocal.m4  configure  configure.ac  crt0.S  crtn.S  syscall.h
newlib/libc/sys/protura/sys/: _stdint.h  dirent.h  fcntl.h  ioctl.h  mount.h  poll.h  reboot.h  select.h  signal.h  socket.h  stat.h  stdio.h  sysmacros.h  termios.h  types.h  unistd.h  utime.h  utmp.h  utsname.h  vfs.h  wait.h
newlib/libc/sys/rdos/: configure
newlib/libc/sys/rtems/: configure
newlib/libc/sys/sh/: configure
newlib/libc/sys/sparc64/: configure
newlib/libc/sys/sun4/: configure
newlib/libc/sys/sysnec810/: configure
newlib/libc/sys/sysvi386/: configure
newlib/libc/sys/sysvnecv70/: configure
newlib/libc/sys/tirtos/: configure
newlib/libc/sys/w65/: configure
newlib/libc/sys/z8ksim/: configure
newlib/libc/syscalls/: Makefile.in
newlib/libc/time/: Makefile.in
newlib/libc/unix/: Makefile.in
newlib/libc/xdr/: Makefile.in
newlib/libm/: Makefile.in  configure
newlib/libm/common/: Makefile.in
newlib/libm/complex/: Makefile.in
newlib/libm/machine/: Makefile.in  configure
newlib/libm/machine/aarch64/: Makefile.in  configure
newlib/libm/machine/arm/: Makefile.in
newlib/libm/machine/i386/: Makefile.in  configure
newlib/libm/machine/nds32/: Makefile.in  configure
newlib/libm/machine/spu/: Makefile.in
newlib/libm/math/: Makefile.in
newlib/libm/mathfp/: Makefile.in
